--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -63,10 +63,10 @@
     <H6>Queremos mejorar para ti, cuéntanos sobre tu experiencia de compra.</H6>
   </div>
   <div class="icons">
-    <i class="bi bi-facebook"><img src="./assets/images/facebook.svg" alt="logo de facebook"></i>
-    <i class="bi bi-instagram"><img src="./assets/images/instagram.svg" alt="logo de instagram"></i>
-    <i class="bi bi-whatsapp"><img src="./assets/images/whatsapp.svg" alt="logo de whatsapp"></i>
-    <i class="bi bi-youtube"><img src="./assets/images/youtube.svg" alt="logo de youtube"></i>
+    <i class="bi bi-facebook"><img src="../assets/images/facebook.svg" alt="logo de facebook"></i>
+    <i class="bi bi-instagram"><img src="../assets/images/instagram.svg" alt="logo de instagram"></i>
+    <i class="bi bi-whatsapp"><img src="../assets/images/whatsapp.svg" alt="logo de whatsapp"></i>
+    <i class="bi bi-youtube"><img src="../assets/images/youtube.svg" alt="logo de youtube"></i>
   </div>
 </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
