modificación del responsive

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
   <div class="inicio__caja1"><img src="./assets/images/bosque de maderas.jpg" alt="muebles de interior"></div>
   <div class="inicio__caja2">
     <h1>LO MEJOR PARA TU HOGAR</h1>
-    <p class="inicio__p">MUEBLERÍA EL TREBOL, DONDE EL ARTE Y LA FUNCIONALIDAD SE FUSIONAN PARA CREAR ESPACIOS ÚNICOS Y ACOGEDORES EN TU HOGAR. INSPIRADOS POR LA BELLEZA Y LA CALIDEZ DE LA MADERA, CADA PIEZA QUE OFRECEMOS CUENTA UNA HISTORIA DE ARTESANÍA EXCEPCIONAL Y DISEÑO.
-      DESDE CLÁSICOS ATEMPORALES HASTA CREACIONES CONTEMPORÁNEAS, NUESTRA SELECCIÓN DE MUEBLES REFLEJA LA CALIDAD Y EL COMPROMISO CON LA EXCELENCIA. CON UN ENFOQUE EN LA MADERA MACIZA, NOS ESFORZAMOS POR OFRECER PRODUCTOS DURADEROS, ELEGANTES Y LLENOS DE CARÁCTER. DESCUBRE LA ESENCIA DE LA COMODIDAD Y EL ESTILO EN MUEBLERÍA EL TREBOL.</p></div>
+    <p class="inicio__p">Mueblería "el trebol", donde el arte y la funcionalidad se fusionan para crear espacios únicos y acogedores en tu hogar. inspirados por la belleza y la calidez de la madera, cada pieza que ofrecemos cuenta una historia de artesanía excepcional y diseño. 
+
+      desde clásicos atemporales hasta creaciones contemporáneas, nuestra selección de muebles refleja la calidad y el compromiso con la excelencia. con un enfoque en la madera maciza, nos esforzamos por ofrecer productos duraderos, elegantes y llenos de carácter. descubre la esencia de la comodidad y el estilo en mueblería el trebol.</p></div>
   </section>
   <section>
     <div><h2>BIENVENIDOS </h2>
