--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -28,7 +28,7 @@
           </div>
         </nav>
   </header>
-  <main class="container">
+  <main  class="container">
     <div class="container">
       <div class="carrusel">
         <div id="carouselExampleCaptions" class="carousel slide">
@@ -41,22 +41,19 @@
             <div class="carousel-item active">
               <img src="../assets/images/sucursales1.jpg" class="d-block w-100" alt="salón de ventas mueblria">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Encontranos en Villa Urquiza</h5>
-                <p>visita nuestro showroom</p>
+                <H1>Sucursales</H1>
               </div>
             </div>
             <div class="carousel-item">
               <img src="../assets/images/sucursales2.jpg" class="d-block w-100" alt="salón de ventas mueblria">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h2>¡visitanos!</h2>
               </div>
             </div>
             <div class="carousel-item">
               <img src="../assets/images/sucursales3.jpg" class="d-block w-100" alt="salón de ventas mueblria">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h2>"Te esperamos"</h2>
               </div>
             </div>
           </div>
@@ -69,9 +66,9 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </div>
+        </div>
       <div class="form">
-        <div><h4>Contacto</h4></div>
+        <div><h2>Contacto</h2></div>
         <form class="row g-3">
           <div class="col-md-6">
             <label for="inputEmail4" class="form-label">Email</label>
@@ -121,11 +118,12 @@
         </form>
       </div>
       <div class="maps">
+        <div><h3>Ubicaciones</h3></div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26288.366114696328!2d-58.514889180615235!3d-34.552396649169765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6c049b27a89%3A0xb4aff81f5c83b76b!2sDot%20Baires%20Shopping!5e0!3m2!1ses-419!2sar!4v1720834784539!5m2!1ses-419!2sar" width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26298.72735716515!2d-58.5318836569336!3d-34.51958963940988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb0ee292497e9%3A0xf9a611e58747f528!2sUnicenter!5e0!3m2!1ses-419!2sar!4v1720834831661!5m2!1ses-419!2sar" width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="form__date">
-        <h2>De la fabrica al hogar</h2>
+        <h3>De la fabrica al hogar</h3>
   <img src="../assets/images/logo el trebol.png" alt="logo de la empresa">
   <iframe width="940" height="615" src="https://www.youtube.com/embed/dApW2xz2ibo?si=AnaIQRRdFoViNGeH&amp;start=331" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <div>
