mejora en sitio responsive

--- a/index.html
+++ b/index.html
@@ -5,55 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>muebles de diseño</title>
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
+    <title>Mueblería "EL TREBOL"</title>
 </head>
 <body>
-    <header>
-      <div class="logo"><img src="./assets/images/logo el trebol.png" alt="imagen del logo de la empresa"></div>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                  <a class="nav-link active" aria-current="page" href="./pages/productos.html">Productos</a>
-                  <a class="nav-link" href="./pages/novedades.html">Novedades</a>
-                  <a class="nav-link" href="./pages/promociones.html">Promociones</a>
-                  <a class="nav-link" href="./pages/contactos.html">Contactos</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
-<main class="inicio"> 
-<section class="inicio__block1">
-  <div class="inicio__caja1"><img src="./assets/images/bosque de maderas.jpg" alt="muebles de interior"></div>
-  <div class="inicio__caja2">
-    <h1>LO MEJOR PARA TU HOGAR</h1>
-    <p class="inicio__p">Mueblería "el trebol", donde el arte y la funcionalidad se fusionan para crear espacios únicos y acogedores en tu hogar. inspirados por la belleza y la calidez de la madera, cada pieza que ofrecemos cuenta una historia de artesanía excepcional y diseño. 
-
-      desde clásicos atemporales hasta creaciones contemporáneas, nuestra selección de muebles refleja la calidad y el compromiso con la excelencia. con un enfoque en la madera maciza, nos esforzamos por ofrecer productos duraderos, elegantes y llenos de carácter. descubre la esencia de la comodidad y el estilo en mueblería el trebol.</p></div>
-  </section>
-  <section>
-    <div><h2>BIENVENIDOS </h2>
-    <p>"Descubre el encanto de la madera, transformando tu hogar con calidez y estilo natural."</p></div>
-  </section>
-  <section class="inicio__block2">
-  <dIv class="inicio__caja3"><img src="./assets/images/index.2.jpg" alt="muebles de interior">
-  <p>"Elegancia rústica con muebles de madera maciza que aportan calidez y durabilidad al hogar."</p></DIv>
-  <div class="inicio__caja4"><img src="./assets/images/index.3.jpg" alt="muebles de interior" srcset="">
-    <p>"Ambientes acogedores y naturales, destacando la belleza y la solidez de la madera maciza."</p></div>
-  <dIv class="inicio__caja5"><img src="./assets/images/mueble.index.jpg" alt="muebles de interior">
-    <p>"Estilo atemporal y robusto, que realzan cualquier espacio con su presencia."</p></DIv>
-</section>
-</main>
+  <header>
+    <div class="logo">
+      <img src="./assets/images/logo el trebol.png" alt="imagen del logo de la empresa de fondo green y letras de bordes black.">
+    </div>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="./pages/productos.html">Productos</a>
+          <a class="nav-link" href="./pages/novedades.html">Novedades</a>
+          <a class="nav-link" href="./pages/promociones.html">Promociones</a>
+          <a class="nav-link" href="./pages/contactos.html">Contactos</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="inicio"> 
+    <section class="inicio__block1">
+      <div class="inicio__caja1"><img src="./assets/images/index.2.jpg" alt="muebles de interior"></div>
+      <div class="inicio__caja2">
+        <h1>"¡LO MEJOR PARA TU HOGAR!"</h1>
+        <p class="inicio__p">Mueblería "el trebol", donde el arte y la funcionalidad se fusionan para crear espacios únicos y acogedores en tu hogar. Inspirados por la belleza y la calidez de la madera, cada pieza que ofrecemos cuenta una historia de artesanía excepcional y diseño. 
+        Desde clásicos atemporales hasta creaciones contemporáneas, nuestra selección de muebles refleja la calidad y el compromiso con la excelencia. Con un enfoque en la madera maciza, nos esforzamos por ofrecer productos duraderos, elegantes y llenos de carácter. Descubre la esencia de la comodidad y el estilo en mueblería el trebol.</p>
+      </div>
+    </section>
+    <section class="inicio__block2">
+      <div>
+        <h2>"BIENVENIDOS"</h2>
+      </div>
+      <div>
+        <p>"Descubre el encanto de la madera, transformando tu hogar con calidez y estilo natural"</p>
+      </div>
+    </section>
+    <section class="inicio__block3">
+      <div class="inicio__caja3"><img src="./assets/images/bosque de maderas.jpg" alt="bosque de madera con troncos cortados.">
+        <p>"Elegancia rústica con muebles de madera maciza que aportan calidez y durabilidad".</p>
+      </div>
+      <div class="inicio__caja4"><img src="./assets/images/index.3.jpg" alt="muebles de interior">
+        <p>"Ambientes acogedores y naturales, destacando la belleza y la solidez de la madera maciza".</p>
+      </div>
+      <div class="inicio__caja5"><img src="./assets/images/mueble.index.jpg" alt="muebles de interior">
+        <p>"Estilo atemporal y robusto, que realzan cualquier espacio con su presencia".</p>
+      </div>
+    </section>
+  </main>  
 <footer>
   <div>
     <h4>El trebol S.A - Muebles en madera maciza © Todos los derechos reservados | Diseño</h4>
-    <H6>Queremos mejorar para ti, cuéntanos sobre tu experiencia de compra.</H6>
+    <H5>Queremos mejorar para ti, cuéntanos sobre tu experiencia de compra.</H5>
   </div>
   <div class="icons">
   <i class="bi bi-facebook"><img src="./assets/images/facebook.svg" alt="logo de facebook"></i>
