--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,69 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <title>Productos</title>
 </head>
 <body>
   <header>
-    <div class="logo"><img src="../assets/images/logo el trebol.png" alt="imagen del logo de la empresa"></div>
-      <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                <a class="nav-link active" aria-current="page" href="../pages/productos.html">Productos</a>
-                <a class="nav-link" href="../pages/novedades.html">Novedades</a>
-                <a class="nav-link" href="../pages/promociones.html">Promociones</a>
-                <a class="nav-link" href="../pages/contactos.html">Contactos</a>
-              </div>
-            </div>
-          </div>
-        </nav>
+    <div class="logo">
+      <img src="../assets/images/logo el trebol.png" alt="imagen del logo de la empresa de fondo green y letras de bordes black.">
+    </div>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="../pages/productos.html">Productos</a>
+          <a class="nav-link" href="../pages/novedades.html">Novedades</a>
+          <a class="nav-link" href="../pages/promociones.html">Promociones</a>
+          <a class="nav-link" href="../pages/contactos.html">Contactos</a>
+        </div>
+      </div>
+    </nav>
   </header>
-  <main class="productos"> 
-    <div class="prod__text">
-    <h1>Productos</h1>
-    <h2>
+  <main class="productos">
+    <h1>PRODUCTOS</h1>
+    <p>
       "Muebles de madera maciza: variedad en sillas, mesas y más, cada pieza única y de alta calidad."
-    </h2>
-  </div>
+    </p>
     <section class="prod__block1">
       <div class="prod__caja1">
-        <img src="../assets/images/productos1.jpg" alt="muebles de interior" srcset="">
- <h3>cajoneras de roble</h3>
-     </div>
-     <div class="prod__caja2">
-      <img src="../assets/images/productos2.jpg" alt="muebles de interior" srcset="">
-      <h3> <h3>cajoneras de Paraíso</h3></h3>
-   </div>
-   <h2>
-   </h2>
-   <div class="prod__caja3">
-    <img src="../assets/images/productos3.jpg" alt="muebles de interior" srcset="">
-    <h3>Mesa de luz</h3>
-  </div>
-  <div class="prod__caja4">
-    <img src="../assets/images/productos4.jpg" alt="muebles de interior" srcset="">
-    <h3>Placard a medida</h3>
-  </div>
-  <div class="prod__caja5">
-    <img src="../assets/images/productos5.jpg" alt="muebles de interior" srcset="">
-    <h3>Escrito con cajones</h3>
-  </div>
-  <div class="prod__caja6">
-    <img src="../assets/images/productos6.jpg" alt="muebles de interior" srcset="">
-    <h3>Sillas exclusivas</h3>
-  </div>
+        <img src="../assets/images/productos1.jpg" alt="muebles de interior, cajonera con cajones de diferentes tamaños.">
+        <h3>cajoneras de roble</h3>
+      </div>
+      <div class="prod__caja2">
+        <img src="../assets/images/productos2.jpg" alt="muebles de interior, cajonera con 2 cajones.">
+        <h3>cajoneras de Paraíso</h3>
+      </div>
+      <div class="prod__caja3">
+        <img src="../assets/images/productos3.jpg" alt="muebles de interior, cajoneras con 3 cajones iguales.">
+        <h3>Mesa de luz</h3>
+      </div>
+      <div class="prod__caja4">
+        <img src="../assets/images/productos4.jpg" alt="muebles de interior, Placard con 1 puerta y 3 estantes sin puertas.">
+        <h3>Placard a medida</h3>
+      </div>
+      <div class="prod__caja5">
+        <img src="../assets/images/productos5.jpg" alt="muebles de oficina, escritorio con 3 cajones de guardado.">
+        <h3>Escrito con cajones</h3>
+      </div>
+      <div class="prod__caja6">
+        <img src="../assets/images/productos6.jpg" alt="muebles de interior, silla con base de tapizado acolchada.">
+        <h3>Sillas exclusivas</h3>
+      </div>
     </section>
-    </main>
+  </main>
+  
 <footer>
   <div>
     <h4>El trebol S.A - Muebles en madera maciza © Todos los derechos reservados | Diseño</h4>
-    <H6>Queremos mejorar para ti, cuéntanos sobre tu experiencia de compra.</H6>
+    <H5>Queremos mejorar para ti, cuéntanos sobre tu experiencia de compra.</H5>
   </div>
   <div class="icons">
   <i class="bi bi-facebook"><img src="../assets/images/facebook.svg" alt=""></i>
