--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -5,66 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>muebles de diseño</title>
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <title>Promociones</title>
 </head>
 <body>
   <header>
-    <div class="logo"><img src="../assets/images/logo el trebol.png" alt="imagen del logo de la empresa"></div>
-      <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                <a class="nav-link active" aria-current="page" href="../pages/productos.html">Productos</a>
-                <a class="nav-link" href="../pages/novedades.html">Novedades</a>
-                <a class="nav-link" href="../pages/promociones.html">Promociones</a>
-                <a class="nav-link" href="../pages/contactos.html">Contactos</a>
-              </div>
-            </div>
-          </div>
-        </nav>
+    <div class="logo">
+      <img src="../assets/images/logo el trebol.png" alt="imagen del logo de la empresa de fondo green y letras de bordes black.">
+    </div>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="../pages/productos.html">Productos</a>
+          <a class="nav-link" href="../pages/novedades.html">Novedades</a>
+          <a class="nav-link" href="../pages/promociones.html">Promociones</a>
+          <a class="nav-link" href="../pages/contactos.html">Contactos</a>
+        </div>
+      </div>
+    </nav>
   </header>
   <main class="promociones"> 
     <div class="prom__text">
-    <h1>PROMOCIONES</h1>
-    <h2>
-      ¡Gran Liquidación de Muebles!
-    </h2>
-  </div>
+      <h1>PROMOCIONES</h1>
+      <p>¡Gran Liquidación de Muebles!</p>
+    </div>
     <section class="prom__block1">
       <div class="prom__caja1">
-        <img src="../assets/images/navedades 1.jpg" alt="" srcset="">
-       <h3>25% OFF</h3>
-     </div>
-     <div class="prom__caja2">
-      <img src="../assets/images/novedades 2.jpg" alt="" srcset="">
-      <h3>35% OFF</h3>
-   </div>
-   <h2>
-    ¡No te pierdas nuestra increíble liquidación de muebles con descuentos del 30%!
-   </h2>
-   <div class="prom__caja3">
-    <img src="../assets/images/novedades 3.jpg" alt="" srcset="">
-    <h3>30% OFF</h3>
-  </div>
-  <div class="prom__caja4">
-    <img src="../assets/images/novedades_4.jpg" alt="." srcset="">
-    <h3>30% OFF</h3>
-  </div>
+        <img src="../assets/images/promox1.jpg" alt="mesa de maquillaje con banqueta para habitación.">
+        <h3>25% OFF</h3>
+      </div>
+      <div class="prom__caja2">
+        <img src="../assets/images/promox2.jpg" alt="mesa de biblioteca con silla de diseño.">
+        <h3>35% OFF</h3>
+      </div>
+      <h2>¡¡¡GRAN OPORTUNIDAD!!!</h2>
+      <p>¡No te pierdas nuestra increíble liquidación de muebles con descuentos del 30%!</p>
+      <div class="prom__caja3">
+        <img src="../assets/images/promox4.jpg" alt="mesa ratona rustica de un tronco de árbol.">
+        <h3>30% OFF</h3>
+      </div>
+      <div class="prom__caja4">
+        <img src="../assets/images/promox5.jpg" alt="mesa y banco largo de exterior para 4 a 6 personas.">
+        <h3>30% OFF</h3>
+      </div>
     </section>
-   <div class="prom__oferta">
-    <h3>Ofertas destacadas</h3>
-    <p>¡No te pierdas nuestra increíble liquidación de muebles con descuentos del 30%! Es el momento perfecto para renovar tu hogar con piezas de alta calidad a precios inigualables. Aprovecha esta oportunidad única y transforma tus espacios con nuestros exclusivos muebles de madera maciza.</p>
-   </div>
-    </main>
+    <section>
+      <div class="prom__oferta">
+        <h3>"Ofertas destacadas"</h3>
+        <p>¡No te pierdas nuestra increíble liquidación de muebles con descuentos del 30%! Es el momento perfecto para renovar tu hogar con piezas de alta calidad a precios inigualables. Aprovecha esta oportunidad única y transforma tus espacios con nuestros exclusivos muebles de madera maciza.</p>
+      </div>
+    </section>
+  </main>
+  
 <footer>
   <div>
     <h4>El trebol S.A - Muebles en madera maciza © Todos los derechos reservados | Diseño</h4>
-    <H6>Queremos mejorar para ti, cuéntanos sobre tu experiencia de compra.</H6>
+    <H5>Queremos mejorar para ti, cuéntanos sobre tu experiencia de compra.</H5>
   </div>
   <div class="icons">
     <i class="bi bi-facebook"><img src="../assets/images/facebook.svg" alt="logo de facebook"></i>
