--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -5,62 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Muebleria el trebol</title>
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <title>Novedades</title>
 </head>
 <body>
   <header>
-    <div class="logo"><img src="../assets/images/logo el trebol.png" alt="imagen del logo de la empresa"></div>
-      <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                <a class="nav-link active" aria-current="page" href="../pages/productos.html">Productos</a>
-                <a class="nav-link" href="../pages/novedades.html">Novedades</a>
-                <a class="nav-link" href="../pages/promociones.html">Promociones</a>
-                <a class="nav-link" href="../pages/contactos.html">Contactos</a>
-              </div>
-            </div>
-          </div>
-        </nav>
+    <div class="logo">
+      <img src="../assets/images/logo el trebol.png" alt="imagen del logo de la empresa de fondo green y letras de bordes black.">
+    </div>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="../pages/productos.html">Productos</a>
+          <a class="nav-link" href="../pages/novedades.html">Novedades</a>
+          <a class="nav-link" href="../pages/promociones.html">Promociones</a>
+          <a class="nav-link" href="../pages/contactos.html">Contactos</a>
+        </div>
+      </div>
+    </nav>
   </header>
-<main class="novedades"> 
-  <div class="nov__text">
-  <h1>NOVEDADES</h1>
-  <h2>
-    "muebles de diseños innovadores, acabados sostenibles y funcionalidad mejorada para tu hogar."
-  </h2>
-</div>
-  <section class="nov__block1">
-    <div class="nov__caja1">
-      <img src="../assets/images/navedades 1.jpg" alt="muebles de interior" srcset="">
-     <h3>Elegante</h3>
-   </div>
-   <div class="nov__caja2">
-    <img src="../assets/images/novedades 2.jpg" alt="muebles de interior" srcset="">
-    <h3>Duraderos</h3>
- </div>
- <h2>
-  "Diseños que combinan tradición y modernidad para transformar tu espacio con estilo y durabilidad."
- </h2>
- <div class="nov__caja3">
-  <img src="../assets/images/novedades 3.jpg" alt="muebles de interior" srcset="">
-  <h3>Clásico</h3>
-</div>
-<div class="nov__caja4">
-  <img src="../assets/images/novedades_4.jpg" alt="muebles de interior" srcset="">
-  <h3>Únicos</h3>
-</div>
-  </section>
+  <main class="novedades">
+    <div class="nov__text">
+      <h1>NOVEDADES</h1>
+      <h2>"Muebles de diseños innovadores, acabados sostenibles y funcionalidad mejorada."</h2>
+    </div>
+    <section class="nov__block1">
+      <div class="nov__caja1">
+        <img src="../assets/images/navedades 1.jpg" alt="muebles de interior">
+        <h3>Elegante</h3>
+      </div>
+      <div class="nov__caja2">
+        <img src="../assets/images/novedades 2.jpg" alt="muebles de interior">
+        <h3>Duraderos</h3>
+      </div>
+      <div>
+      <p>"Diseños que combinan tradición y modernidad para transformar tu espacio con estilo y durabilidad."</p>
+      </div>
+      <div class="nov__caja3">
+        <img src="../assets/images/novedades 3.jpg" alt="muebles de interior">
+        <h3>Clásico</h3>
+      </div>
+      <div class="nov__caja4">
+        <img src="../assets/images/novedades_4.jpg" alt="muebles de interior">
+        <h3>Únicos</h3>
+      </div>
+    </section>
   </main>
+  
 <footer>
   <div>
     <h4>El trebol S.A - Muebles en madera maciza © Todos los derechos reservados | Diseño</h4>
-    <H6>Queremos mejorar para ti, cuéntanos sobre tu experiencia de compra.</H6>
+    <H5>Queremos mejorar para ti, cuéntanos sobre tu experiencia de compra.</H5>
   </div>
   <div class="icons">
     <i class="bi bi-facebook"><img src="../assets/images/facebook.svg" alt="logo de facebook"></i>
