--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <title>Novedades</title>
 </head>
@@ -35,6 +35,7 @@
     <div class="nov__text">
       <h1>NOVEDADES</h1>
       <h2>"Muebles de diseños innovadores, acabados sostenibles y funcionalidad mejorada."</h2>
+    </div>
     </div>
     <section class="nov__block1">
       <div class="nov__caja1">
